@@ -75,7 +75,7 @@
   667afd4295b0aab7eef5682de27d2bfc6d80b03f 2011101100 msys-patch.xml
   1c2617eb65b17b242641af116b294523987dc32e 2011101100 msys-perl.xml
   fb5aa962dfcb854674196f008e1a170ac70d4a4f 2011101100 msys-popt.xml
-  da86a3d83b8f07205b09cab088bf82aea6cd82c0 2011101100 msys-rebase.xml
+  735eb971306adf1b7a5968e462bd3980f660f72c 2011111700 msys-rebase.xml
   cbb26911ffd0d94320ba1f3266eb5d1188a7b3fe 2011101100 msys-regex.xml
   348cc56fadea2bfbb0b9136363893226b250f903 2011101100 msys-rsync.xml
   9da0acc1f2e29785e023148c7f970c0e39d0d1a0 2011101100 msys-rxvt.xml
