@@ -42,14 +42,23 @@
         <requires eq="msys-gawk-*-msys-*-bin.tar" />
         <requires eq="msys-sed-*-msys-*-bin.tar" />
         <release tarname="rebase-3.0.1_1-2-msys-1.0.15-bin.tar.lzma" />
+        <release tarname="rebase-4.0.1_1-1-msys-1.0.17-bin.tar.lzma" />
+      </component>
+
+      <component class="dev">
+        <requires eq="msys-core-*-msys-*-bin.tar" />
+        <requires eq="msys-rebase-%-msys-%-bin.tar" />
+        <release tarname="rebase-4.0.1_1-1-msys-1.0.17-dev.tar.lzma" />
       </component>
 
       <component class="doc">
         <release tarname="rebase-3.0.1_1-2-msys-1.0.15-doc.tar.lzma" />
+        <release tarname="rebase-4.0.1_1-1-msys-1.0.17-doc.tar.lzma" />
       </component>
 
       <component class="lic">
         <release tarname="rebase-3.0.1_1-2-msys-1.0.15-lic.tar.lzma" />
+        <release tarname="rebase-4.0.1_1-1-msys-1.0.17-lic.tar.lzma" />
       </component>
     </package>
 
